--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@asymmetrik/ngx-leaflet": "^6.0.1",
     "@stomp/ng2-stompjs": "^7.2.0",
     "bootstrap": "^4.4.1",
     "bootstrap-icons": "^1.0.0-alpha2",
     "core-js": "^2.5.4",
+    "leaflet": "^1.6.0",
     "rxjs": "~6.5.4",
     "sockjs-client": "^1.4.0",
     "tslib": "^1.10.0",
@@ -33,9 +35,10 @@
     "@angular/cli": "~9.0.5",
     "@angular/compiler-cli": "~9.0.5",
     "@angular/language-service": "~9.0.5",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/leaflet": "^1.5.11",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
